--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,27 +10,31 @@ header {
 .header-container {
   display: flex;
   justify-content: space-between; 
- 
   align-items: center;
   padding: 10px 20px;
   height: 60px;
-  background-image: url("./headerback.jpg");
+  background-image: url("./header.jpg");
   background-size: cover;
   background-position: center;
-  border-radius: 10px;
+ 
 }
 
 .header-container a {
   text-decoration: none;
-  color: black;
+  color: rgb(255, 255, 255);
   font-size: 16px;
   font-weight: 500;
+  
 }
 
 .header-container p {
   margin: 0;
   font-size: 18px;
   font-weight: 500;
+  color:rgb(73, 127, 146);
+  background-color:rgba(255, 255, 255, 0.83);
+  padding: 20px;
+  border-radius:10px;
 }
 
 .profile {
